objects/ImcdCompany__c.object
<CustomObject>
    <description>Custom Object used to store data specific to each IMCD company (see the IMCD global picklist). It is used (not only) for quote document generation purpose. It is related to user.</description>
    <fields>
        <fullName>BankData__c</fullName>
        <description>Field used to store local company bank data</description>
        <label>Bank Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CertificationLogo__c</fullName>
        <description>Field used to store certification logo of the company</description>
        <label>Certification Logo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyEmail__c</fullName>
        <description>Field used to store local company email adress</description>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CompanyFax__c</fullName>
        <description>Filed used to store local company fax detail</description>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyPhone__c</fullName>
        <description>Filed used to store local company phone detail</description>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyWebsite__c</fullName>
        <description>Filed used to store local company website detail</description>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IMCD_Company_Key__c</fullName>
        <externalId>true</externalId>
        <label>IMCD Company Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IMCDcompanyCity__c</fullName>
        <label>IMCD Company City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyCountry__c</fullName>
        <label>IMCD Company Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyPC__c</fullName>
        <description>Postal Code</description>
        <label>IMCD Company PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyState__c</fullName>
        <label>IMCD Company State/County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyStreet__c</fullName>
        <label>IMCD Company Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImcdCompany__c</fullName>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Company Default Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <displayFormat>IM-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Key</label>
        <type>AutoNumber</type>
    </fields>
    <label>IMCD Company</label>
    <nameField>
        <label>IMCD Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMCD Companies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>